Fix z-index problem

--- a/client/styles/effects.sass
+++ b/client/styles/effects.sass
@@ -38,4 +38,4 @@
   position: absolute
   top: 0
   left: 0
-  z-index: 10000
+  z-index: 5000
