--- a/client/styles/modal.sass
+++ b/client/styles/modal.sass
@@ -6,7 +6,7 @@ $padding: 20rem
   left: 0
   right: 0
   bottom: 0
-  z-index: 20000
+  z-index: 8000
 
   .underlay
     position: absolute
